@@ -1,0 +1,35 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.avro.tool;
+
+import static org.junit.Assert.fail;
+
+import org.junit.Test;
+
+public class TestMain {
+  @Test
+  /** Make sure that tool descriptions fit in 80 characters. */
+  public void testToolDescriptionLength() {
+    Main m = new Main();
+    for (Tool t : m.tools.values()) {
+      if (m.maxLen + 2 + t.getShortDescription().length() > 80) {
+        fail("Tool description too long: " + t.getName());
+      }
+    }
+  }
+}
